# niriPipe

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  dev_requirements.txt  requirements.txt  setup.cfg  setup.py
.github/: workflows
.github/workflows/: main.yml
niriPipe/: __init__.py  inttests.py  niriReduce.py  niriSort.py  niriUtils.py
niriPipe/cfg/: default_config.cfg  default_config_calibration.cfg
niriPipe/utils/: checker.py  customLogger.py  downloader.py  finder.py  reducer.py  state.py  tagger.py
niriPipe/utils/tests/: test_checker.py  test_downloader.py  test_finder.py  test_reducer.py  test_tagger.py
src/: niriUtils.py
tests/: setup_package.py  test_niriPipe.py
