[metadata]
name = niriPipe
version = 0.0.1
author = Nat Comeau
author_email = ncomeau@uvic.ca
description = Gemini NIRI Data Processing
long_description = file: README.md

url = https://github.com/nat1405/niriPipe
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires >=3.6
package_dir =
	= niriPipe
packages = find:
scripts =
	bin/niriPipe
install_requires =
	requests

[options.packages.find]
where = niriPipe

[options.package_data]
* = *.cfg
