[metadata]
name = niriPipe
author = Nat Comeau
author_email = ncomeau@uvic.ca
description = Gemini NIRI Data Processing
long_description = file: README.md

url = https://github.com/nat1405/niriPipe
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires >=3.6
packages = find:
install_requires =
	requests
	pyvo
	cadcutils
	cadcdata
	astropy >= 4.0

[options.package_data]
* = *.cfg

[options.entry_points]
console_scripts =
	niriPipe = niriPipe.niriReduce:niri_reduce_main

[coverage:run]
omit = */tests/*
